duniverse/menhirLib.20200211/test/static/bad/type-of-nonexistent-symbol.mly
%token A
%start<unit> main
%type<int> foo

%%

main: A {}
