duniverse/menhirLib.20200211/test/static/bad/type-of-nonexistent-symbol.exp
File "type-of-nonexistent-symbol.mly", line 3, characters 11-14:
Error: foo is undefined.
